--- a/NotificationCenter/Base.lproj/Main.storyboard
+++ b/NotificationCenter/Base.lproj/Main.storyboard
@@ -34,11 +34,11 @@
                         <viewLayoutGuide key="safeArea" id="gK0-qp-jBO"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" selectedImage="3.square.fill" catalog="system" systemItem="downloads" id="tut-bf-1A5"/>
+                    <tabBarItem key="tabBarItem" title="" selectedImage="3.square.fill" catalog="system" systemItem="more" id="tut-bf-1A5"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mar-YL-Vcw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2241" y="665"/>
+            <point key="canvasLocation" x="2072" y="697"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="5yc-Vu-i4n">
@@ -47,6 +47,28 @@
                     <view key="view" contentMode="scaleToFill" id="KY3-Oa-QVO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wDW-iC-nPv">
+                                <rect key="frame" x="114" y="432" width="187" height="78"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Post Notificatio">
+                                            <attributes>
+                                                <font key="NSFont" size="20" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="postNotificationBtn:" destination="o34-R4-wYA" eventType="touchUpInside" id="D0x-lL-Bz3"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="GNV-fH-QR0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -67,10 +89,10 @@
                         <viewLayoutGuide key="safeArea" id="tjM-Dv-aD8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" selectedImage="1.square.fill" catalog="system" systemItem="more" id="ydA-CR-gTs"/>
+                    <tabBarItem key="tabBarItem" title="" selectedImage="1.square.fill" catalog="system" systemItem="mostViewed" id="ydA-CR-gTs"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="541" y="714"/>
+            <point key="canvasLocation" x="594" y="732"/>
         </scene>
         <!--Container View Controller-->
         <scene sceneID="Amy-9M-gQs">
@@ -84,9 +106,9 @@
                     </tabBar>
                     <connections>
                         <segue destination="o34-R4-wYA" kind="relationship" relationship="viewControllers" id="FZg-1Y-vEp"/>
-                        <segue destination="asq-qu-u0G" kind="relationship" relationship="viewControllers" id="Pxv-0c-vZj"/>
-                        <segue destination="wOl-Qv-l1a" kind="relationship" relationship="viewControllers" id="KKA-ln-bp5"/>
-                        <segue destination="M2T-hK-9Wx" kind="relationship" relationship="viewControllers" id="4Gw-nI-j5o"/>
+                        <segue destination="M2T-hK-9Wx" kind="relationship" relationship="viewControllers" id="Hzi-lu-8Qz"/>
+                        <segue destination="asq-qu-u0G" kind="relationship" relationship="viewControllers" id="c7R-cA-pbs"/>
+                        <segue destination="wOl-Qv-l1a" kind="relationship" relationship="viewControllers" id="llo-DH-leq"/>
                     </connections>
                 </tabBarController>
             </objects>
@@ -100,6 +122,9 @@
         <image name="homekit" catalog="system" width="128" height="106"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
